packages/preview/scribbling-hm/0.1.7/README.md
![GitHub Repo stars](https://img.shields.io/github/stars/fine-seat/hm-typst-template?color=fb5454)
![GitHub Release](https://img.shields.io/github/v/release/fine-seat/hm-typst-template?color=fb5454)


# scribbling-hm

Unofficial computer science Bachelor's thesis template for Munich University of Applied Sciences (Hochschule München).

TODO: Adjusting the template for both Bachelor's and Master's thesis

## Installation
You can use this template in the Typst web app by clicking "Start from template" on the dashboard and searching for ``scribbling-hm``.

Alternatively, you can use the CLI to initialize this project using the command:

```bash
typst init @preview/scribbling-hm
```

## Usage
1. Open the ``main.typ`` file.
2. Customize the properties.
3. Write the content at the bottom of the file.
4. Compile.

### Properties

| Property | Description |
|----------|-------------|
| `title` | The title of your thesis |
| `title-translation` | English translation of the title |
| `course-of-study` | Your course of study |
| `author` | Your full name |
| `gender` | Your gender |
| `student-id` | Your student ID number |
| `birth-date` | Your date of birth (optional) |
| `study-group` | Your study group |
| `semester` | Current semester |
| `supervisors` | Array of supervisor names or single supervisor name |
| `supervisor-gender` | Gender of supervisor |
| `submission-date` | Date of thesis submission |
| `abstract-two-langs` | Enable bilingual abstract (default: true) |
| `abstract` | Your thesis abstract |
| `abstract-translation` | English translation of abstract (if bilingual set to true) |
| `blocking` | Enable blocking notice (default: false) |
| `enable-header` | Show page headers (default: true) |
| `draft` | Enable draft mode (default: true) |
| `bib` | Bibliography file reference |
| `abbreviations-list` | Abbreviations for the glossary |
| `variables-list` | Pre-defined variables |
| `print` | Enable print view (default: false) |

### Draft mode

If you set ``draft`` to true, your thesis will have written "ENTWURF" all over the place. This will help you to keep track of whether you're finished or not.

Additionally, if you're in draft mode, you can set todo texts in your document.

```typst
#todo[Something to do]
```

### Variables

The `variables-list` is helpful if you want to pre-define frequently-used phrases, including their formatting. You can use them just like the abbreviations.

IMPORTANT:\
Your keys must be unique across all files (``abbreviations.typ`` and ``variables.typ``)

### Print view

To get a print view, set `print` to true. This adds empty pages, optimizing binding and two sided printing. 